# stroke-traceformer

./: main.py  pyproject.toml
scripts/: create-data.py
src/: config.py  dataset.py  model.py  tokens.py  train_model.py
