[project]
name = "stroke-traceformer"
version = "0.1.0"
description = ""
authors = [{ name = "Kolja Blauhut", email = "koljablauhut@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["cairosvg (>=2.7.1,<3.0.0)", "svgwrite (>=1.4.3,<2.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
